--- a/bulma/sass/utilities/variables.sass
+++ b/bulma/sass/utilities/variables.sass
@@ -68,7 +68,7 @@ $speed: 86ms !default
 ////////////////////////////////////////////////
 // 2. Primary colors
 
-$primary: $turquoise !default
+$primary: $blue !default
 
 $info: $blue !default
 $success: $green !default
@@ -91,7 +91,7 @@ $blue-invert: findColorInvert($blue) !default
 $purple-invert: findColorInvert($purple) !default
 $red-invert: findColorInvert($red) !default
 
-$primary-invert: $turquoise-invert !default
+$primary-invert: $blue-invert !default
 $info-invert: $blue-invert !default
 $success-invert: $green-invert !default
 $warning-invert: $yellow-invert !default
