--- a/bulma/sass/utilities/derived-variables.sass
+++ b/bulma/sass/utilities/derived-variables.sass
@@ -1,6 +1,6 @@
-$primary: $turquoise !default
+$primary: $blue !default
 
-$info: $blue !default
+$info: $turquoise !default
 $success: $green !default
 $warning: $yellow !default
 $danger: $red !default
